Bug 1692046 - Add dark mode address bar and arrowpanel-border colors (Proton). r=mak,dao
There are a few things happening in this patch:
1. New colours are defined in proton-dark/manifest.json. This will be merged with dark/manifest.json when Proton is ready.
2. I removed specific rules for [lwt-default-theme-in-dark-mode]. The [current plan](https://docs.google.com/document/d/1Zh1Nr_lBKpCp4mW-cn6ouaq0ZueK-ReQokyKfQvWiSE/edit#) is to merge proton-dark/manifest.json with default-theme/manifest.json when Proton is ready.
3. Two different borders can now be set on the Urlbar: toolbar_field_focus_border when the panel is closed, and popup_border when it is open. This is a behaviour change, but it's actually consistent with [the documentation](https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/theme#images).
4. popup_border/arrowpanel-border-color is now transparent on non-LWT non-Linux non-HCM. This affects other panels, but I verified with UX on Slack that all light mode Proton panels are losing their border in favour of drop-shadows. These colours are set in browser-custom-colors which is a new sheet that will set Proton's saturated colours. I also moved some rules to that sheet from urlbarView.inc.css that were  serving the same purpose.
5. A border is now shown around the searchbar popup. We never set a border-width on it! We were setting border-color so I don't know if this was intentional or just a bug.

Differential Revision: https://phabricator.services.mozilla.com/D107011

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -4,10 +4,13 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 %endif
 
-%define fieldBorderColor hsla(240,5%,5%,.25)
 %define fieldHoverBorderColor hsla(240,5%,5%,.35)
 %define urlbarMarginInline 5px
 %define urlbarSearchButtonWidth calc(16px + 2 * var(--urlbar-icon-padding))
+
+:root {
+  --toolbar-field-border-color: hsla(240,5%,5%,.25);
+}
 
 @supports not -moz-bool-pref("browser.proton.urlbar.enabled") {
 :root {
@@ -22,13 +25,6 @@
   --toolbar-field-focus-border-color: var(--focus-outline-color);
   --urlbar-container-padding: 1px;
 }
-/* Override this value in the default dark theme. This value should be moved
-    to default-theme/manifest.json when the Proton prefs are removed. */
-:root[lwt-default-theme-in-dark-mode] {
-  --lwt-toolbar-field-border-color: transparent !important;
-}
-/* TODO: Bug 1692046: Add --lwt-toolbar-field-background-color override for
-  [lwt-default-theme-in-dark-mode]. */
 } /*** END proton ***/
 
 #urlbar-container,
@@ -60,7 +56,7 @@
 #searchbar {
   background-color: Field;
   background-clip: padding-box;
-  border: 1px solid @fieldBorderColor@;
+  border: 1px solid var(--toolbar-field-border-color);
   border-radius: var(--toolbarbutton-border-radius);
 }
 
@@ -130,6 +126,7 @@
 }
 
 #urlbar[focused="true"][open] > #urlbar-background {
+  border-color: var(--arrowpanel-border-color);
   box-shadow: 0 2px 14px rgba(0, 0, 0, 0.13);
 }
 
@@ -159,7 +156,7 @@
 
 #urlbar:not([focused="true"]):-moz-lwtheme > #urlbar-background,
 #navigator-toolbox #searchbar:not(:focus-within):-moz-lwtheme {
-  border-color: var(--lwt-toolbar-field-border-color, @fieldBorderColor@);
+  border-color: var(--lwt-toolbar-field-border-color, var(--toolbar-field-border-color));
 }
 
 #urlbar:not([focused="true"]):-moz-lwtheme:hover > #urlbar-background,
